--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,16 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/mycar
+jdbc.url=jdbc:mysql://182.92.157.225:3306/mycar
 jdbc.username=mycar
 jdbc.password=mycar
+
+
+redis.host=locahost
+redis.port=6379
+redis.password=
+redis.timeout=2000
+redis.maxTotal=100
+redis.minIdle=10
+redis.maxIdle=20
+redis.maxActive=20
+redis.maxWaitMillis=1000
+redis.testOnBorrow=true
