Test Message Code

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,13 +4,12 @@ jdbc.username=mycar
 jdbc.password=mycar
 
 
-redis.host=locahost
+redis.host=localhost
 redis.port=6379
 redis.password=
 redis.timeout=2000
 redis.maxTotal=100
 redis.minIdle=10
 redis.maxIdle=20
-redis.maxActive=20
 redis.maxWaitMillis=1000
 redis.testOnBorrow=true
