--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://182.92.157.225:3306/mycar
+jdbc.url=jdbc:mysql://localhost:3306/mycar
 jdbc.username=mycar
 jdbc.password=mycar
 
