--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://182.92.157.225:3306/mycar?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/mycar?useUnicode=true&characterEncoding=utf8
 jdbc.username=mycar
-jdbc.password=mycar
+jdbc.password=237VivVVCuqG30hP
 
 
 redis.host=localhost
