--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
     <!-- spring版本号 -->
-    <spring.version>4.2.5.RELEASE</spring.version>
+    <spring.version>4.3.9.RELEASE</spring.version>
 
     <!-- mybatis版本号 -->
     <mybatis.version>3.2.8</mybatis.version>
@@ -92,6 +92,18 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-aop</artifactId>
       <version>${spring.version}</version>
+    </dependency>
+
+    <!-- ... other dependency elements ... -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>4.2.3.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>4.2.3.RELEASE</version>
     </dependency>
 
     <dependency>
