--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -52,4 +52,8 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <session-config>
+    <session-timeout>10</session-timeout>
+  </session-config>
+
 </web-app>
