--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,7 +4,7 @@ jdbc.username=mycar
 jdbc.password=237VivVVCuqG30hP
 
 
-redis.host=localhost
+redis.host=127.0.0.1
 redis.port=6379
 redis.password=
 redis.timeout=2000
